force-app/main/default/objects/ResearchStudyCandidate/ResearchStudyCandidate.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>