force-app/main/default/objects/ResearchStudyCandidate/fields/Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Reason__c</fullName>
    <description>Mandatory narrative explaining why this candidate did not meet protocol eligibility criteria. Required when Eligibility_Status__c = Ineligible. Part of 21 CFR Part 11 audit trail (the Why).</description>
    <inlineHelpText>Populated automatically by the scoring engine. Records the specific protocol exclusion criterion that was not met.</inlineHelpText>
    <label>Disqualification Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>