force-app/main/default/objects/ResearchStudyCandidate/fields/Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Status__c</fullName>
    <description>Tracks the lifecycle stage of the eligibility screening process for this candidate. Locked after Submitted via GxP_Record_Lock validation rule.</description>
    <inlineHelpText>Set automatically by the Protocol Eligibility Screener flow. Do not modify manually after submission.</inlineHelpText>
    <label>Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>