force-app/main/default/objects/ResearchStudyCandidate/fields/Protocol_Failure_Code__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Failure_Code__c</fullName>
    <description>Machine-readable exclusion criterion code generated by the Apex scoring engine (e.g., EX-01-AGE, EX-02-GENDER, EX-03-HIST). Used for traceability matrix mapping and regulatory reporting.</description>
    <inlineHelpText>System-generated. Maps to a specific protocol criterion in the Traceability Matrix.</inlineHelpText>
    <label>Protocol Failure Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>