force-app/main/default/objects/ResearchStudyCandidate/fields/Screener_JSON_Responses__c.field-meta.xml
<CustomField>
    <fullName>Screener_JSON_Responses__c</fullName>
    <description>Immutable JSON snapshot of all question-and-answer pairs captured during the eligibility screener. Stored for audit reconstruction — allows regulators to replay the exact data presented to the scoring engine without relying on separate systems.</description>
    <inlineHelpText>Read-only. System-generated JSON of all screener responses. Do not edit.</inlineHelpText>
    <label>Screener JSON Responses</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>