force-app/main/default/objects/ResearchStudyCandidate/fields/Screener_Version__c.field-meta.xml
<CustomField>
    <fullName>Screener_Version__c</fullName>
    <description>Records the version of the ProtocolEligibilityScoringEngine Apex class that evaluated this candidate. Required for GxP validation — enables re-execution traceability if logic changes between Salesforce releases.</description>
    <inlineHelpText>Automatically set by the scoring engine at time of evaluation.</inlineHelpText>
    <label>Screener Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>