force-app/main/default/objects/ResearchStudyCandidate/fields/Submission_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Submission_Timestamp__c</fullName>
    <description>System-set UTC timestamp of the moment the screener was finalised and submitted. Set by Apex — never editable by users. Satisfies the When requirement of 21 CFR Part 11 electronic record integrity.</description>
    <inlineHelpText>Read-only. Set automatically when the coordinator submits the eligibility screener.</inlineHelpText>
    <label>Submission Timestamp</label>
    <type>DateTime</type>
</CustomField>