force-app/main/default/objects/ResearchStudyCandidate/listViews/All_Research_Study_Candidates.listView-meta.xml
<ListView>
    <fullName>All_Research_Study_Candidates</fullName>
    <columns>Name</columns>
    <columns>ResearchStudy</columns>
    <columns>Candidate</columns>
    <columns>CareProgramSite</columns>
    <columns>Status</columns>
    <filterScope>Mine</filterScope>
    <label>All Research Study Candidates</label>
</ListView>